Mobile spacing fixes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,15 @@
 .header {
-    height: 8em;
+    height: 60px;
     max-width: 1100px;
     width: 95%;
     margin: 0 auto;
-    justify-content: space-between;
+    justify-content: center;
     position: relative; /* Required for absolute positioning of dropdown */
   }
   
   @media (max-width: 600px) {
     .header {
-      height: 6em;
+      height: 50px;
     }
   }
   
